These files have been update.

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,5 +1,5 @@
 <resources>
-    <string name="app_name">Kalyan Best Game</string>
+    <string name="app_name">The Kalyan Matka</string>
     <string name="single">Single Satta</string>
     <string name="jori">Jodi Satta</string>
     <string name="panel">Panel Satta</string>
